# gbrecompiled

./: .gitignore  .gitmodules  .mcp.json  ACCURACY.md  AGENTS.md  ANDROID.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COSIM_ORACLE.md  CYCLE_EXACT_INITIATIVE.md  ENHANCEMENTS.md  GATE5_SCORECARD.md  GBC.md  GB_ACCURACY_BURNDOWN.md  GHIDRA_SETUP.md  GROUND_TRUTH_WORKFLOW.md  IO_TRACING.md  ISSUES.md  MEM_TIMING_SCOPING.md  README.md  TODO.md  imgui.ini  tetris.toml
.agent/rules/: rules.md
.github/workflows/: release.yml
accuracy/: .gitignore  README.md  axis5_apu.md
accuracy/golden/: .gitignore  build_golden_rom.py  run_golden.sh
accuracy/oracle/: build_oracle.sh  capture_recomp.sh  gb_audio_oracle.c  gb_fb_oracle.c  gb_state_oracle.c  rescore_lowframe.sh  run_cputest.sh  run_cycle_compare.sh  run_testrom.sh  score_mealybug.sh
accuracy/timing/: .gitignore  gb_timing_selftest.c  interp_rmw_test.c  run_interp_rmw_test.sh  run_selftest.sh
accuracy/tools/: _lag_probe.py  _pch_amplitude.py  _pch_envelope.py  _pch_state.py  _pch_state2.py  _peek.py  audio_drift_diff.py  fb_diff.py  gb_cycle_compare.py  perchannel_diff.py
distribution-builder/: README.md  index.html
distribution-builder/css/: styles.css
distribution-builder/data/: gen1.json  gen2.json  items.json  moves.json
distribution-builder/js/: app.js  binary.js  charmap.js  data.js  pkm.js  stats.js
distribution-builder/tools/: generate_data.py
docs/: SHADOW_ENHANCEMENTS.md  WIDESCREEN.md
docs/pokemon_extras_port/: REMOVED_platform_sdl_pokemon_menu.txt
memory/: MEMORY.md  ghidra_mcp.md
recompiler/: CMakeLists.txt
recompiler/include/recompiler/: analyzer.h  config.h  heuristic_eval.h  symbol_table.h
recompiler/include/recompiler/codegen/: c_emitter.h  emitter.h
recompiler/include/recompiler/ir/: ir.h
recompiler/src/: analyzer.cpp  config.cpp  generator.cpp  heuristic_eval.cpp  main.cpp  symbol_table.cpp
recompiler/src/codegen/: c_emitter.cpp
recompiler/src/ir/: ir_builder.cpp
runtime/: CMakeLists.txt
runtime/include/: audio.h  audio_shadow.h  bps_patch.h  cheats.h  color_lut.h  cosim_neutral.h  cosim_state.h  debug_server.h  game_extras.h  gb_asset_loader.h  gb_platform_compat.h  gb_printer.h  gb_sha1.h  gb_sha256.h  gb_timing.h  gb_widescreen.h  gbcam.h  gbrt.h  ir.h  keybinds.h  launcher.h  launcher_ui_seam.h  mock_crystal.h  mock_ir.h  network_discovery.h  platform_sdl.h  ppu.h  psg_shadow.h  relay_client.h  sameboy_oracle.h  serial_link.h  sgb.h  shader_pipeline.h
runtime/include/pokemon/: gen1_wild_diffs_rb.gen.h  gen1_wild_diffs_yellow.gen.h  gen2_wild_diffs_crystal.gen.h  gen2_wild_diffs_gs.gen.h  mock_evolve_patch.h  mock_gen1.h  mock_gen2.h  mock_inject_file.h  mock_ir.h  mock_wild_5050.h
runtime/src/: audio.c  audio_shadow.c  bps_patch.c  cheats.c  color_lut.c  cosim_state.c  debug_server.c  differential.c  game_extras_crc_default.c  game_extras_default.c  gb_asset_loader.c  gb_printer.c  gb_sha1.c  gb_sha256.c  gb_widescreen.c  gbcam.c  gbcam.cpp  gbcam_macos.m  gbrt.c  interpreter.c  ir.c  keybinds.c  launcher.c  launcher_ui_seam.c  mock_crystal.c  mock_ir.c  network_discovery.c  platform_sdl.cpp  ppu.c  psg_shadow.c  relay_client.c  sameboy_oracle.c  serial_link.c  sgb.c  shader_pipeline.cpp
runtime/src/game_defaults/: game_default_dispatch_override.c  game_default_draw_overlay.c  game_default_extended_view.c  game_default_fill_frame_record.c  game_default_get_expected_crc32.c  game_default_get_name.c  game_default_get_platform.c  game_default_get_valid_crcs.c  game_default_handle_arg.c  game_default_handle_debug_cmd.c  game_default_on_frame.c  game_default_on_init.c  game_default_post_frame.c
runtime/src/pokemon/: mock_evolve_patch.c  mock_gen1.c  mock_gen2.c  mock_inject_file.c  mock_ir.c  mock_wild_5050.c
runtime/tools/: generate_wild_diffs.py  generate_wild_diffs_gen2.py
tools/: benchmark_emulators.py  capture_pyboy_frames.py  check_ppm.py  compare_frame_dumps.py  compare_ground_truth.py  compare_lcd_transitions.py  cosim_baselines.tsv  dbg.py  extract_banks.py  fetch_pokered_syms.py  find_data_regions.py  find_rgbds.py  gate5_sweep.sh  gbc_cosim.py  mass_recompile.py  mooneye_sweep.sh  parse_oam.py  read_header.py  rebuild_toml.py  run_ground_truth.py  run_tests.py  scan_ram.py  scan_vram.py  scan_window.py  setup.bat  setup.sh  summarize_interpreter_log.py  sym_to_toml.py
tools/peanut-gb-debug/: CMakeLists.txt  main.c
